# gr-racer

./: .gitignore  Cargo.toml  Grok-Build.md  README.md
src/: main.rs
src/engine/: mod.rs
src/engine/audio/: audio.rs  mod.rs
src/engine/core/: app.rs  mod.rs
src/engine/ecs/: components.rs  mod.rs  systems.rs
src/engine/physics/: mod.rs  physics.rs
src/engine/render/: mod.rs  renderer.rs
src/engine/render/shaders/: basic.wgsl
src/engine/ui/: debug_ui.rs  mod.rs
src/game/: demo_scene.rs  mod.rs
