[package]
name = "rust_racing_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = { version = "24", features = ["webgl"] }
glam = { version = "0.29", features = ["bytemuck"] }
rapier3d = { version = "0.19", features = ["serde", "parallel"] }
egui = "0.31"
egui-winit = "0.31"
egui-wgpu = "0.31"
kira = { version = "0.9", features = ["ogg", "flac", "wav"] }
anyhow = "1.0"
env_logger = "0.11"
pollster = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
